[gd_scene load_steps=5 format=3 uid="uid://e5t4eqvy2csl"]

[ext_resource type="Script" path="res://scripts/UI/hud.gd" id="1_vt00n"]
[ext_resource type="Texture2D" uid="uid://br0ccxolnqw0r" path="res://coffee.png" id="2_ox85r"]
[ext_resource type="Texture2D" uid="uid://be2vvtpovmwgv" path="res://assets/helmet.png" id="3_jire3"]
[ext_resource type="Texture2D" uid="uid://upqet4vweex4" path="res://assets/water_drop.png" id="4_1t14a"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_vt00n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -88.0
offset_right = 52.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Coffee" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Coffee"]
layout_mode = 2

[node name="CoffeeLabel" type="Label" parent="HBoxContainer/Coffee/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="Coffee" type="TextureRect" parent="HBoxContainer/Coffee/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ox85r")
expand_mode = 4

[node name="CoffeeButton" type="Button" parent="HBoxContainer/Coffee"]
unique_name_in_owner = true
layout_mode = 2
flat = true
icon_alignment = 1

[node name="Mechanic" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Mechanic"]
layout_mode = 2

[node name="MechanicLabel" type="Label" parent="HBoxContainer/Mechanic/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="Mechanic" type="TextureRect" parent="HBoxContainer/Mechanic/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_jire3")
expand_mode = 4

[node name="MechanicButton" type="Button" parent="HBoxContainer/Mechanic"]
unique_name_in_owner = true
layout_mode = 2
flat = true
icon_alignment = 1

[node name="PhysicsBachelor" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PhysicsBachelor"]
layout_mode = 2

[node name="PhysicsBachelorLabel" type="Label" parent="HBoxContainer/PhysicsBachelor/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="PhysicsBachelor" type="TextureRect" parent="HBoxContainer/PhysicsBachelor/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_1t14a")
expand_mode = 4

[node name="PhysicsBachelorButton" type="Button" parent="HBoxContainer/PhysicsBachelor"]
unique_name_in_owner = true
layout_mode = 2
flat = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_top = 20.0
offset_right = -25.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Credit:"

[node name="CurrentCredit" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "/"

[node name="NeededCredit" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.5
offset_top = 20.0
offset_right = 53.5
offset_bottom = 60.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Escaped:"

[node name="CurrentEscaped" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="NeededEscape" type="Label" parent="PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[connection signal="pressed" from="HBoxContainer/Coffee/CoffeeButton" to="." method="_on_coffee_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Mechanic/MechanicButton" to="." method="_on_mechanic_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PhysicsBachelor/PhysicsBachelorButton" to="." method="_on_physics_bachelor_button_pressed"]
